--- a/Practica grande/Practica_4_Modelos/Practica 4 Modelos/Modelos.qmd
+++ b/Practica grande/Practica_4_Modelos/Practica 4 Modelos/Modelos.qmd
@@ -5294,9 +5294,11 @@ attrition_test <- testing(attrition_split)
 ```
 
 
-### Oversampling
+### Downsampling
 
-Hemos observado que nuestros datos están desbalanceados por lo que vamos a compensarlos mediante la técnica de oversampling:
+En este caso hemos elegido realizar downsampling debido a que mediante oversampling no se consiguió solucionar el problema del overfitting.
+
+Como resultado se verán un poco sacrificadas otras métricas en este modelo pero vamos a conseguir buenos resultados por lo general.
 
 ```{r}
 #| warning: false
@@ -5305,7 +5307,7 @@ Hemos observado que nuestros datos están desbalanceados por lo que vamos a comp
 attrition_train_balance <- ovun.sample(attrition ~ .,
                                    data = attrition_train,
                                    seed = 200900,
-                                   method = "over")$data
+                                   method = "under")$data
 ```
 
 ```{r}
@@ -5371,7 +5373,7 @@ ntrees_list <- c(50, 100, 200, 400)
 
 mtry_list <- c(2, 4 ,6)
 
-sampsize_list <- c(100, 200, 300, 400)
+sampsize_list <- c(100, 200)
 ```
 
 El parámetro de tamaño de la muestra es grande en comparación con nuestro conjunto de datos por lo que el valor de replace en Random Forest no debería de variar mucho el resultado.
@@ -5552,10 +5554,10 @@ theme(plot.title= element_text(size=15, face = "bold" ),
 set.seed(200900)
 best_rf_model <- randomForest(attrition ~ .,
                               data = attrition_train_balance,
-                              ntree = 400,
+                              ntree = 100,
                               mtry  = 6, 
-                              sampsize = 400,
-                              nodesize = 5,
+                              sampsize = 100,
+                              nodesize = 30,
                               replace=TRUE,
                               importance = TRUE
                               )
@@ -5589,6 +5591,9 @@ theme(axis.title.x = element_blank(),
 ### Predicciones en test
 
 ```{r}
+#| message: false
+#| warning: false
+#| 
 # Matriz de Confusion
 rf_pred <- predict(best_rf_model, newdata = attrition_test, type="response")
 conf_mat <- confusionMatrix(rf_pred, attrition_test$attrition, positive = "1")
@@ -5610,6 +5615,8 @@ statistics <- data.frame (metrics  = c("accuracy","sensitivity","specificity","a
 knitr::kable(statistics , col.names = gsub("[.]", " ", names(statistics)))
 ```
 
+Como ya se mencionó anteriormente se ha conseguido mantener unas métricas correctas en general y tener una buena sensibilidad respecto a la de nuestro entrenamiento por lo que podemos asegurar que hemos conseguido reducir el overfitting de nuestro modelo cuando probamos oversampling.
+
 ```{r}
 #| message: false
 #| warning: false
@@ -5630,6 +5637,94 @@ labs(x = "1 - Specificity",
      subtitle = glue("AUC = {round(auc_value, 3)}"))+
 theme_minimal()+
 theme(axis.title.y = element_text(face="bold"),
+      axis.title.x = element_text(face="bold"),
+      plot.title = element_text(size =15,face="bold"),
+      plot.subtitle = element_text(size  =10))
+```
+## Comparación final 
+
+```{r}
+#| message: false
+#| warning: false
+#| echo: false
+#| 
+saveRDS(rf_pred, file = "./outputs/rf_predicted.rds")
+saveRDS(statistics, file = "./outputs/rf_stats.rds")
+saveRDS(roc_curve_rf, file = "./outputs/rf_roc_auc.rds")
+
+rf_stats <- readRDS("./outputs/rf_stats.rds")
+rf_stats$model <- "Ensamblado - RF"
+
+rf_roc_curve <- readRDS("./outputs/rf_roc_auc.rds")
+rf_roc_curve$model <- "Ensamblado - RF"
+
+nn_stats <- readRDS("./outputs/nn_stats.rds")
+nn_stats$model <- "Red Neuronal"
+
+nn_roc_curve <- readRDS("./outputs/nn_roc_auc.rds")
+nn_roc_curve$model <- "Red Neuronal"
+
+svm_pol_stats <- readRDS("./outputs/svm_pol_stats.rds")
+svm_pol_stats$model <- "SVM Polinomial"
+
+svm_pol_roc_curve <- readRDS("./outputs/svm_pol_roc_auc.rds")
+svm_pol_roc_curve$model <- "SVM Polinomial"
+
+svm_lin_stats <- readRDS("./outputs/svm_lin_stats.rds")
+svm_lin_stats$model <- "SVM Lineal"
+
+svm_lin_roc_curve <- readRDS("./outputs/svm_lin_roc_auc.rds")
+svm_lin_roc_curve$model <- "SVM Lineal"
+
+knn_stats <- readRDS("./outputs/knn_stats.rds")
+knn_stats$model <- "KNN"
+
+knn_roc_curve <- readRDS("./outputs/knn_roc_auc.rds")
+knn_roc_curve$model <- "KNN"
+
+tree_stats <- readRDS("./outputs/tree_stats.rds")
+tree_stats$model <- "Árbol"
+
+tree_roc_curve <- readRDS("./outputs/tree_roc_auc.rds")
+tree_roc_curve$model <- "Árbol"
+
+model_stats <- rbind(rf_stats, nn_stats, svm_pol_stats, svm_lin_stats, knn_stats, tree_stats)
+model_roc_curve <- rbind(rf_roc_curve, nn_roc_curve, svm_pol_roc_curve, svm_lin_roc_curve, knn_roc_curve, tree_roc_curve)
+```
+
+```{r}
+#| message: false
+#| warning: false
+#| echo: false
+
+datatable(model_stats |> arrange(metrics, values, model), rownames = FALSE, filter = "top",options = list(pageLength = 6)) |> formatStyle(names(statistics), lineHeight = "65%")
+
+model_stats |> ggplot(aes(x = metrics , y= values, fill = model)) +
+               geom_bar(alpha = 0.85, position = "dodge", stat = "identity") +
+               scale_fill_manual(values = c("Árbol" = "darkslategray1", "KNN" = "indianred1", "Red Neuronal" = "palegreen2", "SVM Lineal" = "pink", "SVM Polinomial" = "darkgoldenrod1", "Ensamblado - RF" = "darkslategray")) +
+               labs(title = "Comparativa Modelos",
+                    subtitle = "Resultados de las métricas para cada modelo empleado")+
+                theme_minimal()+
+                theme(axis.title.y = element_blank(),
+                      axis.title.x = element_blank(),
+                      axis.text.x = element_text(size = 12,face = "bold"),
+                      plot.title = element_text(size =15,face="bold"),
+                      plot.subtitle = element_text(size  =10))
+
+
+
+# Gráfico Curva ROC
+ggplot(model_roc_curve, aes(x = 1 - specificity, y = sensitivity, colour=model)) +
+geom_line(lwd = 1, alpha = 0.85) +
+geom_abline(lty = "dashed") +
+coord_equal() +
+scale_colour_manual(values = c("Árbol" = "darkslategray1", "KNN" = "indianred1", "Red Neuronal" = "palegreen2", "SVM Lineal" = "pink", "SVM Polinomial" = "darkgoldenrod1", "Ensamblado - RF" = "darkslategray")) +
+labs(x = "1 - Specificity",
+     y = "Sensitivity",
+     title = "Comparativa Modelos",
+     subtitle = "Curva ROC (test) de cada modelo empleado")+
+theme_minimal()+
+  theme(axis.title.y = element_text(face="bold"),
       axis.title.x = element_text(face="bold"),
       plot.title = element_text(size =15,face="bold"),
       plot.subtitle = element_text(size  =10))
